--- a/app/client/web/App.less
+++ b/app/client/web/App.less
@@ -1,11 +1,11 @@
+@import "_reset";
 
-// uncomment this to use reset default styles
-//@import "_reset";
-
-.title {
-  color: blue;
+html, body, #app {
+  width: 100%;
+  height: 100%;
 }
 
-.author {
-  font-weight: bold;
+.full-screen {
+  width: 100%;
+  height: 100%;
 }
