--- a/app/client/web/App.less
+++ b/app/client/web/App.less
@@ -1,11 +1,27 @@
 @import "_reset";
+@import "_globals";
 
 html, body, #app {
   width: 100%;
   height: 100%;
 }
 
+body * {
+  font-size: @font-size-medium;
+  line-height: @font-size-medium * 1.5;
+}
+
 .full-screen {
   width: 100%;
   height: 100%;
 }
+
+
+h1, h2, h3 {
+  font-size: @font-size-big;
+  line-height: @font-size-big * 1.5;
+}
+
+
+@import "components/TrackInfo";
+
